--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,20 +7,25 @@
 
   nav {
     height: 120px;
-    margin: 2px;
+    margin: 5px;
     border-radius: 10px;
-  }
-
-  li {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  li {
     list-style: none;
-    margin: 13px;
-    border: 2px solid black;
-    background-color: coral;
+    margin: 8px;
     border-radius: 20px;
+    width: 200px;
+    text-align: center;
+  }
+
+  li:hover {
+    background-color: gray;
+    border: 2px solid black;
   }
 
   main {
@@ -29,7 +34,7 @@
 
   img {
     width: auto;
-    height: 125px;
+    height: 200px;
     justify-self: center;
     margin: 15px;
   }
