--- a/css/pc.css
+++ b/css/pc.css
@@ -19,12 +19,14 @@
   li {
     list-style: none;
     margin: 0 35px;
-    width: 100px;
+    width: 200px;
     border-radius: 20px;
   }
 
   li:hover {
     background-color:  gray;
+    border: 2px solid black;
+
   }
 
   img {
