--- a/css/pc.css
+++ b/css/pc.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width: 700px) {
   header img {
-    height: 135px;
+    width: 100%;
+    height: auto;
     margin: 2px;
   }
 
@@ -24,9 +25,8 @@
   }
 
   li:hover {
-    background-color:  gray;
+    background-color: gray;
     border: 2px solid black;
-
   }
 
   img {
