--- a/css/pc.css
+++ b/css/pc.css
@@ -1,7 +1,6 @@
 @media only screen and (min-width: 700px) {
   header img {
-    width: 100%;
-    height: auto;
+    height: 135px;
     margin: 2px;
   }
 
@@ -25,8 +24,9 @@
   }
 
   li:hover {
-    background-color: gray;
+    background-color:  gray;
     border: 2px solid black;
+
   }
 
   img {
